--- a/carnet.html
+++ b/carnet.html
@@ -7,6 +7,17 @@
 <title>Carnet de labo — Théo Richard</title>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
+<style>
+
+body { background: #000; color: #fff; }
+a, a:visited, a:active { color: #fff; }
+.site-header { background: #000; }
+.home-button, .top-bar a { color: #fff; }
+.home-button::after, .top-bar a::after { background: #fff; }
+.texte-liste-header { border-bottom-color: rgba(255,255,255,0.15); }
+.texte-item { color: #fff; border-bottom-color: rgba(255,255,255,0.12); }
+
+</style>
 </head>
 
 <body>
