--- a/reflexions.html
+++ b/reflexions.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Réflexions — Théo Richard</title>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&family=IBM+Plex+Mono:wght@400;500&family=Lora:wght@400&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
 
@@ -30,6 +30,7 @@
     <h1>Réflexions</h1>
   </div>
 
+  <!-- AJOUTEZ VOS ARTICLES ICI en copiant ce bloc -->
   <a href="reflexions-pourquoi.html" class="texte-item">
     <div class="texte-meta">
       <span class="texte-titre">Pourquoi je photographie</span>
