--- a/carnet.html
+++ b/carnet.html
@@ -5,10 +5,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Carnet de labo — Théo Richard</title>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&family=IBM+Plex+Mono:wght@400;500&family=Lora:wght@400&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 <style>
-
 body { background: #000; color: #fff; }
 a, a:visited, a:active { color: #fff; }
 .site-header { background: #000; }
@@ -16,7 +15,6 @@ a, a:visited, a:active { color: #fff; }
 .home-button::after, .top-bar a::after { background: #fff; }
 .texte-liste-header { border-bottom-color: rgba(255,255,255,0.15); }
 .texte-item { color: #fff; border-bottom-color: rgba(255,255,255,0.12); }
-
 </style>
 </head>
 
@@ -41,6 +39,7 @@ a, a:visited, a:active { color: #fff; }
     <h1>Carnet de labo</h1>
   </div>
 
+  <!-- AJOUTEZ VOS ARTICLES ICI en copiant ce bloc -->
   <a href="carnet-premier-developpement.html" class="texte-item">
     <div class="texte-meta">
       <span class="texte-titre">Premier développement</span>
