--- a/reflexions.html
+++ b/reflexions.html
@@ -31,9 +31,9 @@
   </div>
 
   <!-- AJOUTEZ VOS ARTICLES ICI en copiant ce bloc -->
-  <a href="reflexions-pourquoi.html" class="texte-item">
+  <a href="template-reflexion.html" class="texte-item">
     <div class="texte-meta">
-      <span class="texte-titre">Pourquoi je photographie</span>
+      <span class="texte-titre">Lorem Ipsum Titre</span>
       <span class="texte-date">Janvier 2025</span>
     </div>
     <p class="texte-intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, ut enim ad minim veniam.</p>
