--- a/reflexions.html
+++ b/reflexions.html
@@ -30,30 +30,24 @@
     <h1>Réflexions</h1>
   </div>
 
-  <!-- AJOUTEZ VOS ARTICLES ICI en copiant ce bloc -->
+  <!-- Premier article → pointe vers le template pour prévisualisation -->
   <a href="template-reflexion.html" class="texte-item">
     <div class="texte-meta">
-      <span class="texte-titre">Lorem Ipsum Titre</span>
+      <span class="texte-titre">Pourquoi je photographie</span>
       <span class="texte-date">Janvier 2025</span>
     </div>
     <p class="texte-intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, ut enim ad minim veniam.</p>
   </a>
 
-  <a href="reflexions-grain.html" class="texte-item">
+  <!-- AJOUTEZ VOS ARTICLES ICI en copiant ce bloc
+  <a href="nom-de-larticle.html" class="texte-item">
     <div class="texte-meta">
-      <span class="texte-titre">Le grain comme langage</span>
-      <span class="texte-date">Février 2025</span>
+      <span class="texte-titre">Titre de l'article</span>
+      <span class="texte-date">Mois Année</span>
     </div>
-    <p class="texte-intro">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+    <p class="texte-intro">Accroche de l'article...</p>
   </a>
-
-  <a href="reflexions-temps.html" class="texte-item">
-    <div class="texte-meta">
-      <span class="texte-titre">Le temps de l'argentique</span>
-      <span class="texte-date">Mars 2025</span>
-    </div>
-    <p class="texte-intro">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </a>
+  -->
 
 </div>
 </div>
