--- a/carnet.html
+++ b/carnet.html
@@ -39,8 +39,8 @@ a, a:visited, a:active { color: #fff; }
     <h1>Carnet de labo</h1>
   </div>
 
-  <!-- AJOUTEZ VOS ARTICLES ICI en copiant ce bloc -->
-  <a href="carnet-premier-developpement.html" class="texte-item">
+  <!-- Premier article → pointe vers le template pour prévisualisation -->
+  <a href="template-labo.html" class="texte-item">
     <div class="texte-meta">
       <span class="texte-titre">Premier développement</span>
       <span class="texte-date">Octobre 2024</span>
@@ -48,21 +48,15 @@ a, a:visited, a:active { color: #fff; }
     <p class="texte-intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.</p>
   </a>
 
-  <a href="carnet-fixer-bain.html" class="texte-item">
+  <!-- AJOUTEZ VOS ARTICLES ICI en copiant ce bloc
+  <a href="nom-de-larticle.html" class="texte-item">
     <div class="texte-meta">
-      <span class="texte-titre">Le bain de fixateur</span>
-      <span class="texte-date">Novembre 2024</span>
+      <span class="texte-titre">Titre de l'article</span>
+      <span class="texte-date">Mois Année</span>
     </div>
-    <p class="texte-intro">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+    <p class="texte-intro">Accroche de l'article...</p>
   </a>
-
-  <a href="carnet-premier-tirage.html" class="texte-item">
-    <div class="texte-meta">
-      <span class="texte-titre">Premier tirage papier</span>
-      <span class="texte-date">Janvier 2025</span>
-    </div>
-    <p class="texte-intro">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet consectetur adipisci velit, sed quia non numquam eius modi tempora incidunt.</p>
-  </a>
+  -->
 
 </div>
 </div>
